@@ -14,13 +14,12 @@ type line_tracker;;
 val open_tracker : string -> out_channel -> line_tracker
 val close_tracker : line_tracker -> unit
 val copy_chunk :
-  string ->
   in_channel -> out_channel -> line_tracker -> Syntax.location -> bool -> unit
 val output_mem_access : out_channel -> int -> unit
 val output_memory_actions :
   string -> out_channel -> Lexgen.memory_action list -> unit
 val output_env :
-    string -> in_channel -> out_channel -> line_tracker ->
+    in_channel -> out_channel -> line_tracker ->
       (Lexgen.ident * Lexgen.ident_info) list -> unit
 val output_args : out_channel -> string list -> unit
 
